Harry Kalogirou 	<harkal@rainbow.cs.unipi.gr>	19 Oct 2001
Paul Nasrat		<pnasrat@uk.now.com>		28 Aug 2001
Peter L Vachuska	<pvachusk@nconnect.net>		13 Aug 2001
Riley Williams		<rhw@MemAlpha.cx>		22 Oct 2001
Simon Weijgers		<simon@weijgers.com>		15 Nov 1998
Thomas McWilliams	<tgm9999@yahoo.com>		 2 Apr 2001

-----------------------------------------------------------------------------

Mon Oct 22 14:22:41 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* THIS IS ELKS RELEASE 0.0.88-pre1.

	* Corrected ELKS_VERSION_CODE calculation - it didn't work when
	  the SUBLEVEL was 0, a case I forgot to test :(((
	* Removed requirement for compile.h and version.h as the relevant
	  values are now provided as defaults to all source code during
	  the compilation process.
	* Simplified creation of elks.spec for `make rpm` command (but
	  this command is not yet guaranteed to work).

Mon Oct 22 10:49:00 EEST 2001 Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Fixed bug in net/Makefile spotted by Riley.

Mon Oct 22 02:06:53 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Fixed typos in recent CHANGELOG entries.
	* Thanks are due to HarKal for sorting out the bug in the Makefiles
	  that I was unable to track down.

Fri Oct 19 11:35:00 EEST 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* THIS IS ELKS RELEASE 0.0.87.

	* Final changes for the release.

Thu Oct 18 17:32:06 EEST 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Fixed `make dist` as it was stopping with error trying to create
	  the arch/i86 directory twice.
	* Fixed `make dist` to include keymap headers in the distribution.
	* Fixed `make dist` to include the net/ipv4 directory in the
	  distribution.

Thu Oct 18 16:53:02 EEST 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Fix in makefiles. The `make dep` command needs version.h and
	  compile.h to work.
	* Fixed arch/i86/mm/Makefile to make the tree compilable.

Wed Oct 17 11:32:57 CEST 2001	Arnaud Launay <asl@launay.org>
