@@ -1,8 +1,6 @@
 #include <linuxmt/types.h>
 #include <linuxmt/utsname.h>
-#include <linuxmt/version.h>
 #include <linuxmt/config.h>
-#include <linuxmt/compile.h>
 
 struct utsname system_utsname=
 {
